# oqs-jupyterbook

./: Makefile  README.md  _config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml
.github/workflows/: main.yml
_data/: toc.yml
_sass/page/elements/: _elements.variables.scss
content/: final_project-solutions.ipynb  final_project.ipynb  getting_started.ipynb  index.md  introduction.ipynb  project_1-depolarizing_channel.ipynb  project_1-solution.ipynb  project_2-pauli_channel.ipynb  project_2-solution.ipynb  project_3-reservoir-engineering.ipynb  project_3-solution.ipynb  project_4-amplitude_damping.ipynb  project_4-solution.ipynb
