[tool.poetry]
name = "oqs-jupyterbook"
version = "0.1.0"
description = ""
authors = ["Matteo Rossi <teo.red90@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
qiskit = "1.0.2"
qiskit-experiments = "1.0.2"
matplotlib = "3.8.3"
pylatexenc = "2.10"

[tool.poetry.dev-dependencies]
jupyter-book = "0.6.4"
bokeh = "2.3.1"
nbconvert = "<7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"